fdo#66075 - Formula editor: export blanks as MathML <mspace> elements.

Change-Id: I5cc0ed9a1273b5fb59d5dbaf63a382c844820ff9
Reviewed-on: https://gerrit.libreoffice.org/4454
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>